<resources>
    <string name="app_name">BlackSplash</string>
    <string name="by">By</string>
    <string name="photos">Photos</string>
    <string name="collections">Collections</string>
    <string name="sort_by">Sort by</string>
    <string name="latest">Latest</string>
    <string name="oldest">Oldest</string>
    <string name="popular">Popular</string>
    <string name="random_photo">Random photo</string>
</resources>
