<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_random_photo"
        android:icon="@drawable/random"
        android:title="@string/random_photo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sort_by"
        android:icon="@drawable/filter_variant"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom">

        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/menu_item_latest"
                    android:icon="@drawable/latest"
                    android:title="@string/latest" />

                <item
                    android:id="@+id/menu_item_oldest"
                    android:icon="@drawable/oldest"
                    android:title="@string/oldest" />

                <item
                    android:id="@+id/menu_item_popular"
                    android:icon="@drawable/popular"
                    android:title="@string/popular" />
            </group>
        </menu>

    </item>


</menu>